--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "backbone": "^1.4.0",
+    "immutable": "^4.0.0-rc.12",
     "jquery": "^3.4.1",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-router-dom": "^5.0.0",
-    "react-scripts": "2.1.3"
+    "react-scripts": "2.1.3",
+    "react-select": "^3.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
